done projects + exp

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Hyperspace by HTML5 UP</title>
+	<title>Jill's portfolio 🥼🧪</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,130 +17,178 @@
 </head>
 
 <body class="is-preload">
-
 	<!-- Sidebar -->
 	<section id="sidebar">
 		<div class="inner">
+			<div class="profile_image">
+				<img src="./images/profile-picture.png" alt="Profile Picture" />
+			</div>
+			<div>
+				<h4>Data Scientist | Cat lover</h4>
+			</div>
+			<ul class="socialmedia_actions icons">
+				<li><a href="https://www.linkedin.com/in/linh-lnn" class="icon brands fa-github"><span class="label">Github</span></a></li>
+				<li><a href="https://github.com/jill-data" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+				<li><a href="mailto:jill.nln@outlook.com" class="fas fa-envelope"><span class="label">Email</span></a>
+				</li>
+				<li><a href="https://drive.google.com/file/d/16x8KEc1hPM3ieLFzQ4jTUw0I23ifOP9F/view?usp=sharing"
+						class="fa fa-file-alt"><span class="label">CV</span></a></li>
+			</ul>
 			<nav>
 				<ul>
-					<li><a href="#intro">Welcome</a></li>
-					<li><a href="#one">Who we are</a></li>
-					<li><a href="#two">What we do</a></li>
+					<li><a href="#past_projects">Past projects</a></li>
+					<li><a href="#work_exp">Work experience</a></li>
 					<li><a href="#three">Get in touch</a></li>
 				</ul>
 			</nav>
 		</div>
 	</section>
-
 	<!-- Wrapper -->
 	<div id="wrapper">
-
 		<!-- Intro -->
-		<section id="intro" class="wrapper style1 fullscreen fade-up">
+		<section id="intro" class="wrapper style1 fade-up">
 			<div class="inner">
-				<h1>Hi, I'm Jill 👋</h1>
-				<p> A data scientist with several years of experience in finance and a keen interest in machine
-					learning.</p>
-				<ul class="actions">
-					<li><a href="#one" class="button">Learn more</a></li>
-				</ul>
+				<div class="content">
+					<h1>Hi, I'm Jill 👋</h1>
+					<p> A data scientist with several years of experience in finance and a keen interest in machine
+						learning.</p>
+					<b>Technologies</b> | Python, Github, SQL, Tableau, R, R Shiny, MS Excel <br>
+					<b>Skills</b> | Machine learning, deep learning, linear optimisation, data visualisation and
+					analysis, hiring, mentoring.
+				</div>
 			</div>
 		</section>
-
-		<!-- One -->
-		<section id="one" class="wrapper style2 spotlights">
+		<!-- Past Projects -->
+		<section id="past_projects" class="wrapper style3 spotlights">
+			<div class="inner style3 project-header">
+				<h2>Past Projects</h2>
+			</div>
+			<!-- Project details -->
 			<section>
-				<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+				<a class="image"><img src="./images/DL-Insurance-Fraud-Detection.png" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>Sed ipsum dolor</h2>
-						<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies
-							erat malesuada quis. Aliquam dapibus.</p>
-						<ul class="actions">
-							<li><a href="generic.html" class="button">Learn more</a></li>
-						</ul>
+						<h2>Insurance claim fraud detection</h2>
+						<div class="project-subtitle">INSEAD, Shift Technology</div>
+						<p>
+							<li>Analyse history of insurance claims</li>
+							<li>Predict fraudulent insurance claims using a combination of heuristics,
+								tree-based machine learning models, and deep learning. </li>
+						</p>
+						<a href="https://github.com/jill-data/DL-Insurance-Fraud-Detection" class="button">Read more</a>
 					</div>
 				</div>
 			</section>
 			<section>
-				<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+				<a class="image"><img src="./images/severance-package-optimisation.png" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>Feugiat consequat</h2>
-						<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies
-							erat malesuada quis. Aliquam dapibus.</p>
-						<ul class="actions">
-							<li><a href="generic.html" class="button">Learn more</a></li>
-						</ul>
+						<h2>Severance package optimisation</h2>
+						<div class="project-subtitle">INSEAD</div>
+						<p>
+							<li>Predict employee's likeliness to leave</li>
+							<li>Optimised severance offer allocation to minimise severance cost under business and ethical constraints</li>
+						</p>
+						<a href="https://github.com/jill-data/severance-package-optimisation" class="button">Read more</a>
 					</div>
 				</div>
 			</section>
 			<section>
-				<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+				<a class="image"><img src="./images/wine-retailers-scraping-and-analysis.png" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>Ultricies aliquam</h2>
-						<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies
-							erat malesuada quis. Aliquam dapibus.</p>
-						<ul class="actions">
-							<li><a href="generic.html" class="button">Learn more</a></li>
-						</ul>
+						<h2>Wine data scraping and analysis</h2>
+						<p>
+							<li>Scraped wine data from 4 retailers' websites</li>
+							<li>Analysed their market positioning and product offerings</li>
+						</p>
+						<a href="https://github.com/jill-data/wine-retailers-scraping-and-analysis" class="button">Read more</a>
+					</div>
+				</div>
+			</section>
+			<section>
+				<a class="image"><img src="./images/Kaggle-survey-2022-DV.png" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Data scientist survey analysis</h2>
+						<p>
+							<li>How is machine learning adopted globally? </li>
+							<li>What are data scientists' backgrounds? What tools do they use? How much do they make?</li>
+						</p>
+						<a href="https://github.com/jill-data/Kaggle-survey-2022-DV" class="button">Read more</a>
 					</div>
 				</div>
 			</section>
 		</section>
-
-		<!-- Two -->
-		<section id="two" class="wrapper style3 fade-up">
+		<!-- Work experience -->
+		<section id="work_exp" class="wrapper style2 fade-up">
 			<div class="inner">
-				<h2>What we do</h2>
-				<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat
-					malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet
-					imperdiet est velit quis lorem.</p>
-				<div class="features">
-					<section>
-						<span class="icon solid major fa-code"></span>
-						<h3>Lorem ipsum amet</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
-					</section>
-					<section>
-						<span class="icon solid major fa-lock"></span>
-						<h3>Aliquam sed nullam</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
-					</section>
-					<section>
-						<span class="icon solid major fa-cog"></span>
-						<h3>Sed erat ullam corper</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
-					</section>
-					<section>
-						<span class="icon solid major fa-desktop"></span>
-						<h3>Veroeros quis lorem</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
-					</section>
-					<section>
-						<span class="icon solid major fa-link"></span>
-						<h3>Urna quis bibendum</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
-					</section>
-					<section>
-						<span class="icon major fa-gem"></span>
-						<h3>Aliquam urna dapibus</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
-					</section>
+				<h2>Work experience</h2>
+				<div class="timeline-centered" id="experience">
+					<article class="timeline-entry">
+						<div class="timeline-entry-inner">
+							<div class="timeline-icon color-2"></div>
+							<div class="timeline-label">
+								<div class="job-header">
+									<span class="job-company">iae London</span>
+									<span class="job-location">London, UK</span>
+									<span class="job-duration">April 2019 - Sep 2022</span>
+								</div>
+								<span class="job-title">Finance and Operations Analyst</span>
+								<li>Analysed company sales performance data to support C-suite plan and strategy.</li>
+								<li>Aggregated and cleaned financial data from multiple sources to produce monthly
+									financial reports.</li>
+								<li>Organised staff recruitment, onboarding, and training (5 positions in 12 months).
+								</li>
+								<li>Directly delivered training and supervised 2 assistants in financial and operational
+									tasks.</li>
+							</div>
+						</div>
+					</article>
+					<article class="timeline-entry">
+						<div class="timeline-entry-inner">
+							<div class="timeline-icon color-2"></div>
+							<div class="timeline-label">
+								<div class="job-header">
+									<span class="job-company">Manpower Group</span>
+									<span class="job-location">Hanoi, Vietnam</span>
+									<span class="job-duration">Oct 2016 - Dec 2016</span>
+								</div>
+								<span class="job-title">Marketing Intern</span>
+								<li>Assisted manager in researching content for the company's participation in the World
+									Economic Forum.</li>
+								<li>Cooperated with the marketing team to represent the company at social events.</li>
+							</div>
+						</div>
+					</article>
+					<article class="timeline-entry">
+						<div class="timeline-entry-inner">
+							<div class="timeline-icon color-2"></div>
+							<div class="timeline-label">
+								<div class="job-header">
+									<span class="job-company">Spyder Initiative</span>
+									<span class="job-location">Hanoi, Vietnam</span>
+									<span class="job-duration">Oct 2015 - Mar 2016</span>
+								</div>
+								<span class="job-title">Market Researcher</span>
+								<li>Conducted 2 market research projects in Vietnam and advised Japanese clients looking
+									to expand markets.</li>
+								<li>Researched and advised clients on Vietnam’s related free trade agreements.</li>
+								<li>Collected data through face-to-face and phone call surveys in Hanoi to obtain market
+									insights.</li>
+								<li>Maintained relationships with clients and leads through email, telephone, and
+									face-to-face meetings.</li>
+							</div>
+						</div>
+					</article>
+					<article class="timeline-entry begin">
+						<div class="timeline-entry-inner">
+							<div class="timeline-icon color-2"></div>
+						</div>
+					</article>
 				</div>
-				<ul class="actions">
-					<li><a href="generic.html" class="button">Learn more</a></li>
-				</ul>
 			</div>
 		</section>
-
 		<!-- Three -->
 		<section id="three" class="wrapper style1 fade-up">
 			<div class="inner">
@@ -174,9 +222,7 @@
 						<ul class="contact">
 							<li>
 								<h3>Address</h3>
-								<span>12345 Somewhere Road #654<br />
-									Nashville, TN 00000-0000<br />
-									USA</span>
+								<span>12345 Somewhere Road #654<br /> Nashville, TN 00000-0000<br /> USA</span>
 							</li>
 							<li>
 								<h3>Email</h3>
@@ -189,16 +235,12 @@
 							<li>
 								<h3>Social</h3>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span
-												class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span
-												class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a>
 									</li>
-									<li><a href="#" class="icon brands fa-instagram"><span
-												class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-linkedin-in"><span
-												class="label">LinkedIn</span></a></li>
+									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</li>
 						</ul>
@@ -206,19 +248,7 @@
 				</div>
 			</div>
 		</section>
-
 	</div>
-
-	<!-- Footer -->
-	<footer id="footer" class="wrapper style1-alt">
-		<div class="inner">
-			<ul class="menu">
-				<li>&copy; Untitled. All rights reserved.</li>
-				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-			</ul>
-		</div>
-	</footer>
-
 	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jquery.scrollex.min.js"></script>
@@ -227,7 +257,6 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-
 </body>
 
 </html>
