--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
 							<li>Analyse history of insurance claims</li>
 							<li>Predict fraudulent insurance claims using a combination of heuristics,
 								tree-based machine learning models, and deep learning. </li>
+						<p>
+							<span class="badge badge-language">Python</span>
+							<span class="badge badge-technology">tensorflow</span>
+							<span class="badge badge-technology">scikit-learn</span>
+							<span class="badge badge-technology">pandas</span>
+							<br>
+							<span class="badge badge-skill">Machine learning</span>
+							<span class="badge badge-skill">Deep learning</span>
+							<span class="badge badge-skill">Data visualisation</span>
+						</p>
 						</p>
 						<a href="https://github.com/jill-data/DL-Insurance-Fraud-Detection" class="button">Read more</a>
 					</div>
@@ -88,6 +98,15 @@
 						<p>
 							<li>Predict employee's likeliness to leave</li>
 							<li>Optimised severance offer allocation to minimise severance cost under business and ethical constraints</li>
+						<p>
+							<span class="badge badge-language">Python</span>
+							<span class="badge badge-technology">pandas</span>
+							<span class="badge badge-technology">PuLP</span>
+							<span class="badge badge-technology">numpy</span>
+							<br>
+							<span class="badge badge-skill">Machine learning</span>
+							<span class="badge badge-skill">Linear Programming</span>
+						</p>
 						</p>
 						<a href="https://github.com/jill-data/severance-package-optimisation" class="button">Read more</a>
 					</div>
@@ -101,6 +120,16 @@
 						<p>
 							<li>Scraped wine data from 4 retailers' websites</li>
 							<li>Analysed their market positioning and product offerings</li>
+						<p>
+							<span class="badge badge-language">Python</span>
+							<span class="badge badge-technology">selenium</span>
+							<span class="badge badge-technology">requests</span>
+							<span class="badge badge-technology">seaborn</span>
+							<br>
+							<span class="badge badge-skill">Web scraping</span>
+							<span class="badge badge-skill">Data cleaning</span>
+							<span class="badge badge-skill">Data visualisation</span>
+						</p>
 						</p>
 						<a href="https://github.com/jill-data/wine-retailers-scraping-and-analysis" class="button">Read more</a>
 					</div>
@@ -114,6 +143,15 @@
 						<p>
 							<li>How is machine learning adopted globally? </li>
 							<li>What are data scientists' backgrounds? What tools do they use? How much do they make?</li>
+						<p>
+							<span class="badge badge-language">Python</span>
+							<span class="badge badge-language">Tableau</span>
+							<span class="badge badge-technology">pandas</span>
+							<span class="badge badge-technology">seaborn</span>
+							<br>
+							<span class="badge badge-skill">Data cleaning</span>
+							<span class="badge badge-skill">Data visualisation</span>
+						</p>
 						</p>
 						<a href="https://github.com/jill-data/Kaggle-survey-2022-DV" class="button">Read more</a>
 					</div>
