--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 			</ul>
 			<nav>
 				<ul>
-					<li><a href="#past_projects">Past projects</a></li>
+					<li><a href="#intro">Welcome</a></li>
+					<li><a href="#projects">Projects</a></li>
 					<li><a href="#work_exp">Work experience</a></li>
 					<li><a href="#three">Get in touch</a></li>
 				</ul>
@@ -58,10 +59,10 @@
 				</div>
 			</div>
 		</section>
-		<!-- Past Projects -->
-		<section id="past_projects" class="wrapper style3 spotlights">
+		<!-- Projects -->
+		<section id="projects" class="wrapper style3 spotlights">
 			<div class="inner style3 project-header">
-				<h2>Past Projects</h2>
+				<h2>Projects</h2>
 			</div>
 			<!-- Project details -->
 			<section>
@@ -290,7 +291,7 @@
 	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/jquery..min.js"></script>
 	<script src="assets/js/browser.min.js"></script>
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
