--- a/index.html
+++ b/index.html
@@ -24,30 +24,31 @@
 				<img src="./images/profile-picture.png" alt="Profile Picture" />
 			</div>
 			<div>
-				<h4>Data Scientist | Cat lover</h4>
+				<h3>Data Scientist | Cat lover</h3>
 			</div>
-			<ul class="socialmedia_actions icons">
-				<li><a href="https://www.linkedin.com/in/linh-lnn" class="icon brands fa-github"><span class="label">Github</span></a></li>
-				<li><a href="https://github.com/jill-data" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-				<li><a href="mailto:jill.nln@outlook.com" class="fas fa-envelope"><span class="label">Email</span></a>
-				</li>
-				<li><a href="https://drive.google.com/file/d/16x8KEc1hPM3ieLFzQ4jTUw0I23ifOP9F/view?usp=sharing"
-						class="fa fa-file-alt"><span class="label">CV</span></a></li>
-			</ul>
 			<nav>
 				<ul>
-					<li><a href="#intro">Welcome</a></li>
+					<li><a href="#intro" class="active">Introduction</a></li>
 					<li><a href="#projects">Projects</a></li>
 					<li><a href="#work_exp">Work experience</a></li>
-					<li><a href="#three">Get in touch</a></li>
+					<li><a href="#contact">Contact details</a></li>
 				</ul>
 			</nav>
+			<ul class="socialmedia_actions icons">
+				<li><a href="https://www.linkedin.com/in/linh-lnn" class="icon brands fa-github"><span class="label">Github</span></a>
+				</li>
+				<li><a href="https://github.com/jill-data" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
+				</li>
+				<li><a href="mailto:jill.nln@outlook.com" class="fas fa-envelope"><span class="label">Email</span></a>
+				</li>
+				<li><a href="https://bit.ly/jillnguyen-cv" class="fa fa-file-alt"><span class="label">CV</span></a></li>
+			</ul>
 		</div>
 	</section>
 	<!-- Wrapper -->
 	<div id="wrapper">
 		<!-- Intro -->
-		<section id="intro" class="wrapper style1 fade-up">
+		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
 				<div class="content">
 					<h1>Hi, I'm Jill 👋</h1>
@@ -60,7 +61,7 @@
 			</div>
 		</section>
 		<!-- Projects -->
-		<section id="projects" class="wrapper style3 spotlights">
+		<section id="projects" class="wrapper style3 spotlights fade-up">
 			<div class="inner style3 project-header">
 				<h2>Projects</h2>
 			</div>
@@ -229,61 +230,53 @@
 			</div>
 		</section>
 		<!-- Three -->
-		<section id="three" class="wrapper style1 fade-up">
+		<section id="contact" class="wrapper style3-alt fade-up">
 			<div class="inner">
-				<h2>Get in touch</h2>
-				<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat
-					malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet
-					imperdiet est velit quis lorem.</p>
-				<div class="split style1">
-					<section>
-						<form method="post" action="#">
-							<div class="fields">
-								<div class="field half">
-									<label for="name">Name</label>
-									<input type="text" name="name" id="name" />
-								</div>
-								<div class="field half">
-									<label for="email">Email</label>
-									<input type="text" name="email" id="email" />
-								</div>
-								<div class="field">
-									<label for="message">Message</label>
-									<textarea name="message" id="message" rows="5"></textarea>
-								</div>
-							</div>
-							<ul class="actions">
-								<li><a href="" class="button submit">Send Message</a></li>
-							</ul>
-						</form>
-					</section>
-					<section>
-						<ul class="contact">
-							<li>
-								<h3>Address</h3>
-								<span>12345 Somewhere Road #654<br /> Nashville, TN 00000-0000<br /> USA</span>
-							</li>
-							<li>
-								<h3>Email</h3>
-								<a href="#">user@untitled.tld</a>
-							</li>
-							<li>
-								<h3>Phone</h3>
-								<span>(000) 000-0000</span>
-							</li>
-							<li>
-								<h3>Social</h3>
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a>
-									</li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								</ul>
-							</li>
-						</ul>
-					</section>
+				<h2>Contact details</h2>
+				<p>Feel free to contact me for any question, or if you're interested in working with me 😊</p>
+				<div class="features">
+					<div class="column">
+						<section>
+							<span class="icon solid major fa-envelope"></span>
+							<h3>Email</h3>
+							<a href="mailto:jill.nln@outlook.com">jill.nln@outlook.com</a>
+						</section>
+					</div>
+					<div class="column">
+						<section>
+							<span class="icon solid major fa-phone"></span>
+							<h3>Telephone</h3>
+							<a href="tel:+447518881862">(+44) 751 888 1862</a>
+						</section>
+					</div>
+					<div class="column">
+						<section>
+							<span class="icon brands fa-github fa-2x"></span>
+							<h3>Github</h3>
+							<a href="https://github.com/jill-data">jill-data</a>
+						</section>
+					</div>
+					<div class="column">
+						<section>
+							<span class="icon brands fa-linkedin fa-2x"></span>
+							<h3>Linkedin</h3>
+							<a href="https://www.linkedin.com/in/linh-lnn">Linh (Jill Nguyen)</a>
+						</section>
+					</div>
+					<div class="column">
+						<section>
+							<span class="fas fa-map-marker-alt fa-3x"></span>
+							<h3>Location</h3>
+							<a href="https://bit.ly/3MMgCu7">London, UK</a>
+						</section>
+					</div>
+					<div class="column">
+						<section>
+							<span class="fa fa-file-alt fa-3x"></span>
+							<h3>Resume / CV</h3>
+							<a href="https://bit.ly/jillnguyen-cv">Google Drive Link</a>
+						</section>
+					</div>
 				</div>
 			</div>
 		</section>
