add education + clean up

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Hyperspace by HTML5 UP
+	Inspired by Hyperspace by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -24,13 +24,14 @@
 				<img src="./images/profile-picture.png" alt="Profile Picture" />
 			</div>
 			<div>
-				<h3>Data Scientist | Cat lover</h3>
+				<h4>Data Scientist | Cat lover</h4>
 			</div>
 			<nav>
 				<ul>
 					<li><a href="#intro" class="active">Introduction</a></li>
 					<li><a href="#projects">Projects</a></li>
 					<li><a href="#work_exp">Work experience</a></li>
+					<li><a href="#education">Education</a></li>
 					<li><a href="#contact">Contact details</a></li>
 				</ul>
 			</nav>
@@ -218,6 +219,51 @@
 									insights.</li>
 								<li>Maintained relationships with clients and leads through email, telephone, and
 									face-to-face meetings.</li>
+							</div>
+						</div>
+					</article>
+					<article class="timeline-entry begin">
+						<div class="timeline-entry-inner">
+							<div class="timeline-icon color-2"></div>
+						</div>
+					</article>
+				</div>
+			</div>
+		</section>
+		<!-- Education -->
+		<section id="education" class="wrapper style4 fade-up">
+			<div class="inner">
+				<h2>Education</h2>
+				<div class="timeline-centered" id="experience">
+					<article class="timeline-entry">
+						<div class="timeline-entry-inner">
+							<div class="timeline-icon color-2"></div>
+							<div class="timeline-label">
+								<div class="job-header">
+									<span class="job-company">Bayes Business School</span>
+									<span class="job-location">London, UK</span>
+									<span class="job-duration">Sep 2022 - Sep 2023</span>
+								</div>
+								<span class="job-title">MSc. Business Analytics (Data Science track)</span>
+								<li><b>Grade</b>: Distiction (Expected)</li>
+								<li><b>Relevant modules</b>: Machine Learning, Deep Learning, Data visualisation, Statistical Modelling,
+									NLP, Web scraping.</li>
+							</div>
+						</div>
+					</article>
+					<article class="timeline-entry">
+						<div class="timeline-entry-inner">
+							<div class="timeline-icon color-2"></div>
+							<div class="timeline-label">
+								<div class="job-header">
+									<span class="job-company">City, University of London</span>
+									<span class="job-location">London, UK</span>
+									<span class="job-duration">Sep 2017 - Sep 2018</span>
+								</div>
+								<span class="job-title">MSc. International Business Economics</span>
+								<li><b>Grade</b>: Distiction</li>
+								<li><b>Relevant modules</b>: Statistics, Macro Economics, Financial Markets, Corporate Finance,
+									Econometrics.</li>
 							</div>
 						</div>
 					</article>
