--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<li><a href="#contact">Contact details</a></li>
 				</ul>
 			</nav>
-			<ul class="socialmedia_actions icons">
+			<ul class="socialmedia_actions icons fade-up">
 				<li><a href="https://www.linkedin.com/in/linh-lnn" class="icon brands fa-github"><span class="label">Github</span></a>
 				</li>
 				<li><a href="https://github.com/jill-data" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
@@ -318,7 +318,7 @@
 					</div>
 					<div class="column">
 						<section>
-							<span class="fa fa-file-alt fa-3x"></span>
+							<span class="fas fa-file-alt fa-3x"></span>
 							<h3>Resume / CV</h3>
 							<a href="https://bit.ly/jillnguyen-cv">Google Drive Link</a>
 						</section>
