add wind turbine state prediction

--- a/index.html
+++ b/index.html
@@ -68,6 +68,29 @@
 			</div>
 			<!-- Project details -->
 			<section>
+				<a class="image"><img src="./images/wind-turbine-state-prediction.png" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Wind turbine mode prediction</h2>
+						<p>
+							<li>Infer wind turbine operating modes based on telemetry data using various deep learning approaches.</li>
+							<li>Hyperparameter tuning using the HyperBandit algorithm</li>
+							<li>Implemented a research paper which converted time series data to images for the learning task.</li>
+						<p>
+							<span class="badge badge-language">Python</span>
+							<span class="badge badge-technology">tensorflow</span>
+							<span class="badge badge-technology">numpy</span>
+							<br>
+							<span class="badge badge-skill">Deep learning</span>
+							<span class="badge badge-skill">Time series</span>
+							<span class="badge badge-skill">Classification</span>
+						</p>
+						</p>
+						<a href="https://github.com/jill-data/wind-turbine-state-prediction" class="button">Read more</a>
+					</div>
+				</div>
+			</section>
+			<section>
 				<a class="image"><img src="./images/DL-Insurance-Fraud-Detection.png" /></a>
 				<div class="content">
 					<div class="inner">
